# jungfrau_commissioning

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  example_complete_params.json  example_params.json  params_for_blank_test_run.json  params_for_glycerol_test_run.json  params_for_random_crystal_test_run.json  pyproject.toml  setup_environment.sh  setup_ipython.py  zeolite_crystal_2.json
.github/: CONTRIBUTING.rst
.github/workflows/: code.yml
docs/: conf.py  index.rst
docs/developer/explanations/decisions/: 0002-switched-to-pip-skeleton.rst
docs/developer/how-to/: make-release.rst
docs/developer/tutorials/: dev-install.rst
docs/user/how-to/: run-container.rst
docs/user/reference/: api.rst
docs/user/tutorials/: installation.rst
param_files/: insulin_1.json  insulin_2.json  insulin_2_destroy.json  insulin_2_fast.json  insulin_2_offsetremoved.json  insulin_3.json  insulin_4.json  insulin_5.json  insulin_6.json  insulin_7.json  lysozyme_1.json  lysozyme_2.json  lysozyme_3.json  thaumatin.json  thaumatin_2.json  thaumatin_3.json  thaumatin_4.json  zeolite_crystal_2.json  zeolite_crystal_2_1khz.json  zeolite_crystal_2_2khz.json
src/jungfrau_commissioning/: __init__.py  __main__.py
src/jungfrau_commissioning/callbacks/: nexus_writer.py
src/jungfrau_commissioning/plans/: gain_mode.py  gain_mode_and_darks.py  gain_mode_darks_plans.py  gain_mode_darks_plans_alternative.py  jungfrau_plans.py  rotation_scan_plan.py  rotation_scan_plans.py  utility_plans.py  zebra.py  zebra_plans.py
src/jungfrau_commissioning/plans/callbacks/: nexus_writer.py
src/jungfrau_commissioning/utils/: log.py  params.py  utils.py
tests/: conftest.py  test_cli.py  test_dark_plans.py  test_nexus.py  test_rotation_plan.py
tests/test_data/: bad_params_acq_time_too_short.json
